# noteviz

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.example  LICENSE  README.md  h --set-upstream origin ui-changes-v2  h -u origin ui-changes-v2  pyproject.toml  requirements.txt  requirements_v1.txt  setup.py
.cursor/rules/: dont-kill-commands.mdc  install-only-required-packages.mdc  packages-to-use.mdc  refer-to-streamlit-docs  wsl-rule.mdc
.github/workflows/: ci.yml
src/noteviz/: cli.py  config.py
src/noteviz/config/: __init__.py  test_config.py
src/noteviz/core/: __init__.py  models.py
src/noteviz/core/embedding/: __init__.py  base.py  openai.py
src/noteviz/core/flowchart/: __init__.py  base.py  mermaid.py  openai.py
src/noteviz/core/llm/: __init__.py  base.py  config.py  openai.py  random_chunk.py
src/noteviz/core/pdf/: __init__.py  base.py  page_aware_pdf.py  processor.py  pypdf.py
src/noteviz/core/retrieval/: __init__.py  base.py  cosine.py
src/noteviz/ui/: app.py
src/noteviz/ui/components/: flowchart_viewer.py  pdf_uploader.py  topic_selector.py
tests/: __init__.py  test_page_aware.py  test_page_aware_simple.py  test_page_aware_sync.py
tests/integration/: __init__.py  test_flowchart.py  test_live_openai.py  test_pipeline.py
tests/integration/data/: generate_sample_pdf.py
tests/unit/: __init__.py  test_cli.py  test_config.py  test_embedding.py  test_llm.py  test_page_aware_pdf.py  test_pdf.py  test_random_chunk.py  test_retrieval.py
tests/unit/core/flowchart/: test_base.py  test_mermaid.py  test_openai.py
