[project]
name = "noteviz"
version = "0.1.0"
authors = [
  { name="Pruthvi Raj", email="pruthvirg2121@gmail.com" },
]
description = "A tool to visualize and analyze PDF documents"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.0.0",
    "pypdf>=5.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "reportlab>=4.0.0",
]

[project.scripts]
noteviz = "noteviz.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests",
    "expensive: marks tests that make actual API calls and are expensive to run",
]
testpaths = ["tests"]
python_files = ["test_*.py"] 